fix(Navbar): topbar vertical alignment for smaller screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -185,3 +185,9 @@ body {
     grid-template-columns: repeat(2, 1fr) !important;
   }
 }
+
+@media (max-width: 640px) {
+  :root {
+    --topbar-height: auto;
+  }
+}
